# misha-task-tracker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  task-tracker.canvas
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_01_10_1330-8b7bf3811328_add_user.py  2025_01_10_1341-7c5d5a2f3544_add_task.py  2025_01_10_1508-7d3c8748aaa2_add_replay.py  2025_01_13_1233-8f998c047924_update_task.py  2025_02_04_1409-622595041812_init_db.py  2025_02_04_2315-ecb979e4c0bf_update_replay.py  2025_02_10_1257-9e84b10837ea_remove_how_many.py
backend/app/: main.py  run.sh
backend/app/alembic/versions/: 2025_02_04_1409-622595041812_init_db.py  (+2 more)
backend/app/core/: __init__.py  auth.py  config.py  db_helper.py
backend/app/handlers/: __init__.py
backend/core/: __init__.py  auth.py  config.py  crud.py  db_helper.py
backend/core/models/: __init__.py  base.py  replay.py  task.py  user.py
backend/core/time_templating/: utils.py
backend/handlers/: __init__.py
backend/handlers/auth/: __init__.py  schemes.py  views.py
backend/handlers/crud/: views.py
backend/handlers/tasks/: schemes.py  utils.py  views.py
bot/: README.md  main.py  pyproject.toml  run.sh  settings.py
bot/keyboard/: __init__.py  keyboards.py
bot/utils/: __init__.py  auth.py  crud.py  encode.py  validators.py
bot/views/: __init__.py
bot/views/base/: __init__.py  commands.py
bot/views/crud/: __init__.py
bot/views/crud/complete_task/: states.py  utils.py  views.py
bot/views/crud/create_task/: states.py  views.py
bot/views/crud/delete_task/: states.py  utils.py  views.py
bot/views/crud/read_task/: callbacks.py  states.py  utils.py  views.py
bot/views/view/: __init__.py
time_templating/: README.md  classes.py  main.py  pyproject.toml  test.py  utils.py
(+17 files in other folders)
