[tool.poetry]
name = "time-templating"
version = "0.1.0"
description = "Это небольшая утилита для более гибкой настройки дней, на которые назначаются задачи в ToDo-приложениях. Например, если вы каждую среду кладёте что-то в голову своей девушке (но не мысли), это будет выглядеть как-то так: e_w_we — каждую неделю по средам."
authors = ["medin-misha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
